--- a/src/pages/social.css
+++ b/src/pages/social.css
@@ -85,6 +85,7 @@ html, body {
   width: 100%;
   transition: width 0.2s ease-in-out;
   box-sizing: border-box;
+  background-color: var(--bg-button);
 }
 
 .textarea:focus {
